login button mobile bug

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -32,11 +32,19 @@
   }
 }
 
+.nav_right {
+  display: none;
+}
+
 .mobile_container {
   margin-right: 3rem;
   margin-top: 0.6rem;
   transition: 0.5s ease-in-out;
   z-index: 50;
+
+  .mobile_popout {
+    transition: opacity 0.5s ease-in-out;
+  }
 
   .menu_icon {
     cursor: pointer;
@@ -51,7 +59,7 @@
       0 30px 60px -30px rgba(0, 0, 0, 0.3);
     right: 38px;
     top: 15px;
-    transition: linear 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
 
     .close {
       position: relative;
@@ -114,7 +122,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 1rem;
+    margin-right: 3rem;
 
     .nav_right_user_true {
       cursor: pointer;
@@ -174,26 +182,6 @@
     }
   }
 
-  .login {
-    cursor: pointer;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    padding-bottom: 0px;
-    background-color: #1155cc;
-    color: white;
-    border: none;
-    padding: 15px 25px;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
-    transition-duration: 0.4s;
-  }
-  .login:hover {
-    background-color: #4eafeb !important;
-    transition-duration: 0.4s;
-  }
   .register {
     align-items: center;
     justify-content: center;
@@ -227,4 +215,25 @@
     background-color: #7abde4 !important;
     transition: 0.4s;
   }
+}
+
+.login {
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  padding-bottom: 0px;
+  background-color: #1155cc;
+  color: white;
+  border: none;
+  padding: 15px 25px;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  transition-duration: 0.4s;
+}
+.login:hover {
+  background-color: #4eafeb !important;
+  transition-duration: 0.4s;
 }
